typing into input fields on iOS fix & cursor is a pointer on several elements

--- a/vk-apps-frontend/src/assets/css/index.css
+++ b/vk-apps-frontend/src/assets/css/index.css
@@ -1,6 +1,15 @@
 a {
     color: inherit;
     text-decoration: none;
+    cursor: pointer;
+}
+
+input {
+    -webkit-user-select: text !important;
+}
+
+button, .CellButton, .Button, .Cell--expandable {
+    cursor: pointer;
 }
 
 * {
